# equipe4-airnoisepy-20262

./: .gitignore  LICENSE  LICENSE.md  README.md  Requirements.txt  pyproject.toml  ruff.toml
.github/workflows/: tests.yml
airnoisepy/: __init__.py  anp_database.py  flight_operation.py  noise_calculator.py  noise_contour.py  opensky_fetcher.py  results_exporter.py
airnoisepy/database/: anp.py
airnoisepy/flight/: opensky.py
airnoisepy/noise/: calculator.py  contour.py
data/: sample_flights.json  sample_track.json  test_opensky.py
data/anp/: EASA_ANP_database_NPD_Data_v9.xlsx
demo/: app.py
notebooks/: yul_example.ipynb
tests/: __init__.py  test_anp_database.py  test_flight_operation.py  test_noise_calculator.py  test_noise_contour.py  test_opensky_fetcher.py  test_results_exporter.py
